Prasad 7Apr2014 init

--- a/res/layout/fragment_posts.xml
+++ b/res/layout/fragment_posts.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
    
-    <ListView android:id="@+id/android:list"
+    <ListView android:id="@+id/post_list_view"
           android:layout_width="fill_parent"
         	android:layout_height="fill_parent"/>
 	
