--- a/res/layout/post_row.xml
+++ b/res/layout/post_row.xml
@@ -5,7 +5,17 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/post_data_text_view"
+        android:id="@+id/post_creator_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/post_message_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/post_time_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
