--- a/res/layout/activity_comments_view.xml
+++ b/res/layout/activity_comments_view.xml
@@ -3,6 +3,6 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.cs9033.classified.CommentsView"
+    tools:context="com.cs9033.classified.CommentsActivity"
     tools:ignore="MergeRootFrame" />
 
