--- a/res/layout/fragment_comments_view.xml
+++ b/res/layout/fragment_comments_view.xml
@@ -10,4 +10,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.cs9033.classified.CommentsView$PlaceholderFragment" >
 
+    <ListView
+        android:id="@+id/comment_list_view"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
+
 </LinearLayout>
