--- a/res/layout/fragment_demo_keys.xml
+++ b/res/layout/fragment_demo_keys.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment_main_layout"
+    android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -8,24 +8,24 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.cs9033.classified.MainActivity$PlaceholderFragment" >
+    tools:context="com.cs9033.classified.DemoKeys$PlaceholderFragment" >
 
-    <EditText
-        android:id="@+id/main_edit_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-
-    <Button
-        android:id="@+id/main_button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button" />
-
-    <ListView
-        android:id="@android:id/android:list"
+    <TextView
+        android:id="@+id/demo_keys_current_mac"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    </ListView>
+        android:layout_height="wrap_content"
+        android:text="demo_keys_current_mac" />
+
+    <TextView
+        android:id="@+id/demo_keys_current_e"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="demo_keys_current_e" />
+
+    <TextView
+        android:id="@+id/demo_keys_old_mac"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="demo_keys_old_mac" />
 
 </LinearLayout>
