--- a/res/menu/create_post.xml
+++ b/res/menu/create_post.xml
@@ -1,9 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.cs9033.classified.create.CreateChatRoomActivity" >
+    tools:context="com.cs9033.classified.create.CreatePostActivity" >
 
     <item
-        android:id="@+id/create_chatroom_menu_save_chatroom"
+        android:id="@+id/create_post_menu_save_post"
         android:icon="@drawable/ic_action_save"
         android:showAsAction="always"
         android:title="@string/save_chat_room"/>
