--- a/res/layout/activity_create_post.xml
+++ b/res/layout/activity_create_post.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.cs9033.classified.create.CreateChatRoomActivity"
+    tools:context="com.cs9033.classified.create.CreatePostActivity"
     tools:ignore="MergeRootFrame" >
 
     <LinearLayout
@@ -18,7 +18,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <EditText
-            android:id="@+id/create_chat_room_name"
+            android:id="@+id/create_post_name"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:ems="10"
@@ -41,7 +41,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <EditText
-            android:id="@+id/create_chat_room_desc"
+            android:id="@+id/create_post_desc"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:hint="@string/desc"
