--- a/res/menu/classified_chat_rooms.xml
+++ b/res/menu/classified_chat_rooms.xml
@@ -3,14 +3,14 @@
     tools:context="com.cs9033.classified.ChatRoomActivity" >
 
     <item
-        android:id="@+id/classified_chat_rooms_menu_create_chatroom"
-        android:icon="@drawable/ic_action_new"
-        android:showAsAction="always"
-        android:title="@string/create_chat_room"/>
-    <item
         android:id="@+id/classified_chat_rooms_menu_join_chatroom"
         android:icon="@drawable/ic_action_add_group"
         android:showAsAction="always"
         android:title="@string/join_chat_room"/>
+    <item
+        android:id="@+id/classified_chat_rooms_menu_create_chatroom"
+        android:icon="@drawable/ic_action_new"
+        android:showAsAction="always"
+        android:title="@string/title_activity_create_chat_room"/>
 
 </menu>
