--- a/res/layout/fragment_scan_qr1.xml
+++ b/res/layout/fragment_scan_qr1.xml
@@ -5,17 +5,9 @@
     android:orientation="vertical" >
 
     <Button
-        android:id="@+id/show_qr2_verify_key_button"
+        android:id="@+id/scan_qr1_initiate_add_user_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/verify_add_user_key" >
-    </Button>
-
-    <Button
-        android:id="@+id/show_qr2_next"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:enabled="false"
-        android:text="@string/next" />
+        android:text="@string/initiate" />
 
 </LinearLayout>
