--- a/res/layout/fragment_chat_room_detail.xml
+++ b/res/layout/fragment_chat_room_detail.xml
@@ -1,6 +1,6 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout1"
+    android:id="@+id/chat_room_detail_list_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -10,4 +10,4 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.cs9033.classified.ShowUsersFragment" >
 
-</LinearLayout>
+</ListView>
