--- a/res/layout/fragment_users.xml
+++ b/res/layout/fragment_users.xml
@@ -1,6 +1,7 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_users_root"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-</LinearLayout>
+</ListView>
