--- a/res/layout/activity_add_user.xml
+++ b/res/layout/activity_add_user.xml
@@ -1,8 +1,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/mybutton"
     tools:context="com.cs9033.classified.create.AddUserActivity"
     tools:ignore="MergeRootFrame" />
 
